<resources>
    <string name="app_name">CalcMyFuel</string>
    <string name="starting_location">Starting location</string>
    <string name="average_fuel_usage_l_100km">Average fuel usage (l/100km)</string>
    <string name="fuel_in_tank_l">Fuel in tank (l)</string>
    <string name="destination">Destination</string>
    <string name="calculate">Calculate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="result">result</string>
    <string name="go_back">Go back</string>
    <string name="gasoline">Gasoline</string>
    <string name="diesel">Diesel</string>
    <string name="lpg">LPG</string>
    <string name="title_activity_maps">Map</string>
    <string name="map">Map</string>
</resources>